[gd_scene load_steps=4 format=3 uid="uid://cpgbjdx6rpgu5"]

[ext_resource type="Theme" uid="uid://dqqhynmg03neg" path="res://resources/ui/themes/default.tres" id="1_lde4l"]
[ext_resource type="Script" uid="uid://dd6bl1sdun1n1" path="res://scenes/menus/pause_menu/pause_menu.gd" id="2_fgv3k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lde4l"]
bg_color = Color(0, 0, 0, 0.466667)

[node name="PauseMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_lde4l")
theme_override_styles/panel = SubResource("StyleBoxFlat_lde4l")
script = ExtResource("2_fgv3k")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 800
theme_override_constants/margin_top = 390
theme_override_constants/margin_right = 800
theme_override_constants/margin_bottom = 390

[node name="Panel" type="PanelContainer" parent="Margin"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Margin/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32

[node name="Buttons" type="VBoxContainer" parent="Margin/Panel/Margin"]
layout_mode = 2
alignment = 1

[node name="ContinueButton" type="Button" parent="Margin/Panel/Margin/Buttons"]
layout_mode = 2
text = "Continue"

[node name="SettingsButton" type="Button" parent="Margin/Panel/Margin/Buttons"]
layout_mode = 2
text = "Settings"

[node name="QuitMainMenuButton" type="Button" parent="Margin/Panel/Margin/Buttons"]
layout_mode = 2
text = "Quit to Main Menu"

[node name="QuitDesktopButton" type="Button" parent="Margin/Panel/Margin/Buttons"]
layout_mode = 2
text = "Quit to Desktop"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Margin/Panel/Margin/Buttons/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Margin/Panel/Margin/Buttons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Margin/Panel/Margin/Buttons/QuitMainMenuButton" to="." method="_on_quit_main_menu_button_pressed"]
[connection signal="pressed" from="Margin/Panel/Margin/Buttons/QuitDesktopButton" to="." method="_on_quit_desktop_button_pressed"]
